infra/local/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      containers:
        - name: mongo
          image: mongo
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          resources:
            limits:
              memory: 521Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
