infra/local/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: deep-interview-server-local
          resources:
            limits:
              memory: 521Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 5000
      targetPort: 5000
